# BetOnTracker

./: .gitignore  QUEUES.md
.github/workflows/: build-and-deploy.yaml  build.yaml  deploy.yaml  workflow_run.yaml
agents/: README.md  basic.py  evaluate.py  graph.py  main.py  prompts.py  requirements.txt
agents/mock/: send_to_raw.py
frontend/: Dockerfile  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/assets/: wiadomosci_ztm_rss.xml
frontend/src/components/: Feed.tsx  Item.tsx  ManagementPanel.tsx  Pill.tsx  RssFeed.tsx  RssItem.tsx  SearchableRow.tsx  Tag.tsx  TopBar.tsx
frontend/src/scripts/: rss.ts
frontend/src/types/: Article.ts  types.ts
news/: process_feeds.py  pyproject.toml  requirements.txt
news/src/: requirements.txt
news/src/handlers/: process_feeds.py
news/src/news/: __init__.py  feeds.py  router.py  upload_to_s3.py
orchestrator/: Dockerfile  build.gradle  gradle.properties
orchestrator/src/main/java/org/betonskm/orchestrator/: OrchestratorApplication.java
orchestrator/src/main/java/org/betonskm/orchestrator/configuration/: ApplicationConfiguration.java  Constants.java  Costants.java  JacksonConfiguration.java  MapperConfiguration.java  (+2 more)
orchestrator/src/main/resources/: application.yml
orchestrator/src/main/resources/db/migration/: V1__category_table.sql  V2__website_table.sql  V3__category_website_table.sql  V4__transaction_outbox_table.sql  V5__transaction_inbox.sql  V6__article_table.sql  V7__article_new_columns.sql
orchestrator/src/test/java/org/betonskm/orchestrator/: OrchestratorApplicationTests.java
rss/: pyproject.toml
rss/resources/: test_rss.xml
rss/src/rss/: __init__.py  feeds.py  router.py
scripts/: README.md  collect_message.py  download_from_s3.py  process_feeds.py  publish_message.py  test.json  upload_to_s3.py
(+82 files in other folders)
