[project]
name = "news"
version = "0.1.0"
description = "BetOnTracker News Module"
readme = "README.md"
authors = [
    { name = "maksnowak", email = "59841779+maksnowak@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.58",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "requests>=2.32.5",
]

[project.scripts]
news = "news:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
