[project]
name = "rss"
version = "0.1.0"
description = "BetOnTracker RSS Management Module"
readme = "README.md"
authors = [
    { name = "maksnowak", email = "59841779+maksnowak@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "feedparser>=6.0.12",
    "uvicorn>=0.38.0",
]

[project.scripts]
rss = "rss:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
